monticore-generator/src/test/resources/cocos/invalid/A4009/A4009a.mc4
package cocos.invalid.A4009;

grammar A4009a extends mc.grammars.types.TestTypes {

  interface QualifiedName;

}
